src/objects/Reward_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Current_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Points</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Points_Needed__c</fullName>
        <formula>Reward__r.Points_Needed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points Needed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_to_Award__c</fullName>
        <formula>Reward__r.Points_to_Award__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points to Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reward_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reward To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reward_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reward__c</fullName>
        <label>Reward</label>
        <referenceTo>Reward__c</referenceTo>
        <relationshipLabel>Reward Assignments</relationshipLabel>
        <relationshipName>Reward_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Reward</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reward Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reward Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>